// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should remove selected fields from selectable 1`] = `
<EuiPopover
  anchorPosition="leftCenter"
  button={
    <EuiButtonEmpty
      iconType="plusInCircleFilled"
      isDisabled={false}
      onClick={[Function]}
      size="xs"
    >
      <FormattedMessage
        defaultMessage="Add"
        id="xpack.maps.tooltipSelector.togglePopoverLabel"
        values={Object {}}
      />
    </EuiButtonEmpty>
  }
  closePopover={[Function]}
  display="inlineBlock"
  hasArrow={true}
  id="addTooltipFieldPopover"
  isOpen={false}
  ownFocus={true}
  panelPaddingSize="none"
>
  <EuiSelectable
    onChange={[Function]}
    options={
      Array [
        Object {
          "label": "@timestamp-label",
          "prepend": <FieldIcon
            className="eui-alignMiddle"
            fill="none"
            type="date"
          />,
          "value": "@timestamp",
        },
      ]
    }
    searchProps={
      Object {
        "compressed": true,
      }
    }
    searchable={true}
    singleSelection={false}
  >
    <Component />
  </EuiSelectable>
  <EuiSpacer
    size="xs"
  />
  <EuiPopoverFooter>
    <EuiTextAlign
      textAlign="right"
    >
      <EuiButton
        fill={true}
        isDisabled={true}
        onClick={[Function]}
        size="s"
      >
        Add
      </EuiButton>
    </EuiTextAlign>
  </EuiPopoverFooter>
</EuiPopover>
`;

exports[`Should render 1`] = `
<EuiPopover
  anchorPosition="leftCenter"
  button={
    <EuiButtonEmpty
      iconType="plusInCircleFilled"
      isDisabled={false}
      onClick={[Function]}
      size="xs"
    >
      <FormattedMessage
        defaultMessage="Add"
        id="xpack.maps.tooltipSelector.togglePopoverLabel"
        values={Object {}}
      />
    </EuiButtonEmpty>
  }
  closePopover={[Function]}
  display="inlineBlock"
  hasArrow={true}
  id="addTooltipFieldPopover"
  isOpen={false}
  ownFocus={true}
  panelPaddingSize="none"
>
  <EuiSelectable
    onChange={[Function]}
    options={
      Array [
        Object {
          "label": "@timestamp-label",
          "prepend": <FieldIcon
            className="eui-alignMiddle"
            fill="none"
            type="date"
          />,
          "value": "@timestamp",
        },
        Object {
          "label": "custom label for prop1",
          "prepend": <FieldIcon
            className="eui-alignMiddle"
            fill="none"
            type="string"
          />,
          "value": "prop1",
        },
        Object {
          "label": "prop2-label",
          "prepend": <FieldIcon
            className="eui-alignMiddle"
            fill="none"
            type="string"
          />,
          "value": "prop2",
        },
      ]
    }
    searchProps={
      Object {
        "compressed": true,
      }
    }
    searchable={true}
    singleSelection={false}
  >
    <Component />
  </EuiSelectable>
  <EuiSpacer
    size="xs"
  />
  <EuiPopoverFooter>
    <EuiTextAlign
      textAlign="right"
    >
      <EuiButton
        fill={true}
        isDisabled={true}
        onClick={[Function]}
        size="s"
      >
        Add
      </EuiButton>
    </EuiTextAlign>
  </EuiPopoverFooter>
</EuiPopover>
`;
